apps/base/actual-budget/actual-budget-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actual-budget-ingressroute
  annotations:
    gethomepage.dev/href: "https://${SUBDOMAIN:=actual-budget}.hephaestus.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "actual-budget"
    gethomepage.dev/description: "A local-first personal finance app"
    gethomepage.dev/app: actual-budget
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/actual-budget.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`${SUBDOMAIN:=actual-budget}.hephaestus.markmk.com`)
      kind: Rule
      services:
        - name: actual-budget
          port: 5006
